--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,8 +10,8 @@
             android:id="@+id/homeToolbar"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorAccent"
+            android:layout_height="?attr/actionBarSize">
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -38,9 +38,57 @@
             android:layout_weight="2">
 
             <TextView
+                android:layout_margin="50dp"
+                android:textAlignment="center"
+                android:textColor="@color/design_default_color_surface"
                 android:id="@+id/response"
+                android:textSize="20dp"
+                style="@style/TextAppearance.MaterialComponents.Button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.3">
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/home_deposit"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:textColor="@color/colorAccent"
+                    android:drawableTop="@drawable/reorder_horizontal"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/home_withdraw"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:textColor="@color/colorAccent"
+                    android:drawableTop="@drawable/send"/>
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
