Generating Address on Blockcypher.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -63,6 +63,7 @@
 
 
                 <Button
+                    android:id="@+id/depositsButton"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/home_deposit"
