--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
             android:id="@+id/homeToolbar"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:background="@color/colorAccent"
+            android:background="@color/design_default_color_secondary"
             android:layout_height="?attr/actionBarSize">
 
         </androidx.appcompat.widget.Toolbar>
@@ -68,8 +68,24 @@
                     android:layout_height="match_parent"
                     android:text="@string/home_deposit"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/design_default_color_secondary"
                     android:drawableTop="@drawable/reorder_horizontal"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@string/home_home"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:textColor="@color/design_default_color_secondary"
+                    android:drawableTop="@drawable/home"/>
 
             </LinearLayout>
 
@@ -85,7 +101,7 @@
                     android:layout_height="match_parent"
                     android:text="@string/home_withdraw"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:textColor="@color/colorAccent"
+                    android:textColor="@color/design_default_color_secondary"
                     android:drawableTop="@drawable/send"/>
 
             </LinearLayout>
