--- a/app/src/main/res/drawable/reorder_horizontal.xml
+++ b/app/src/main/res/drawable/reorder_horizontal.xml
@@ -4,5 +4,5 @@
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#D81B60" android:pathData="M3,15H21V13H3V15M3,19H21V17H3V19M3,11H21V9H3V11M3,5V7H21V5H3Z" />
+    <path android:fillColor="#03DAC6" android:pathData="M3,15H21V13H3V15M3,19H21V17H3V19M3,11H21V9H3V11M3,5V7H21V5H3Z" />
 </vector>
