User can edit his account.

--- a/app/src/main/res/menu/mainmenu.xml
+++ b/app/src/main/res/menu/mainmenu.xml
@@ -19,10 +19,12 @@
                 app:showAsAction="ifRoom"
                 android:title="@string/configurations" />
 
+            <item android:id="@+id/action_logout"
+                app:showAsAction="ifRoom"
+                android:title="@string/logout" />
+
         </menu>
 
     </item>
-
-
 
 </menu>
