--- a/app/src/main/res/layout/activity_deposits.xml
+++ b/app/src/main/res/layout/activity_deposits.xml
@@ -45,16 +45,17 @@
 
         </LinearLayout>
 
-
         <LinearLayout
             android:orientation="horizontal"
+            android:background="@drawable/border"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.3">
+            android:layout_weight="0.3" >
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="0dp"
+                android:layout_marginStart="30dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
@@ -91,6 +92,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="0dp"
+                android:layout_marginEnd="30dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
