--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -51,13 +51,15 @@
 
         <LinearLayout
             android:orientation="horizontal"
+            android:background="@drawable/border"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.3">
+            android:layout_weight="0.3" >
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="0dp"
+                android:layout_marginStart="30dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
@@ -93,6 +95,7 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="0dp"
+                android:layout_marginEnd="30dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
 
