--- a/app/src/main/res/layout/activity_deposits.xml
+++ b/app/src/main/res/layout/activity_deposits.xml
@@ -41,6 +41,21 @@
                 android:layout_height="0dp"
                 android:layout_weight="10"/>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2">
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/deposits_recycleView"
+                android:scrollbars="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"/>
 
 
         </LinearLayout>
