--- a/app/src/main/res/layout/activity_deposits.xml
+++ b/app/src/main/res/layout/activity_deposits.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:orientation="vertical"
@@ -13,7 +13,20 @@
             android:background="@color/design_default_color_secondary"
             android:layout_height="?attr/actionBarSize" />
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.google.android.material.tabs.TabLayout>
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -21,44 +34,47 @@
             android:layout_height="0dp"
             android:layout_weight="3">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnNewAddress"
-                style="@style/Widget.MaterialComponents.Button"
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/AddressViewPager"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginEnd="100dp"
-                android:layout_weight="1"
-                android:text="@string/deposits_newAddress"
-                android:textColor="@color/design_default_color_on_primary" />
+                android:layout_height="match_parent">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/addresses_recycleView"
-                android:scrollbars="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="10"/>
+                <fragment
+                    android:id="@+id/mainFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:name="com.example.bit.View.Fragments.AddressFragment"
+                    tools:layout="@layout/fragment_deposit_addresses">
+                </fragment>
+
+            </androidx.viewpager.widget.ViewPager>
 
         </LinearLayout>
-
-        <LinearLayout
+<!--
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/DepositsLayout"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2">
 
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/deposits_recycleView"
-                android:scrollbars="vertical"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="10"/>
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/deposits_recycleView"
+                    android:scrollbars="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="10"/>
 
 
-        </LinearLayout>
+            </LinearLayout>
+
+        </androidx.viewpager.widget.ViewPager>-->
 
         <LinearLayout
             android:orientation="horizontal"
