--- a/app/src/main/res/layout/activity_deposits.xml
+++ b/app/src/main/res/layout/activity_deposits.xml
@@ -6,27 +6,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/homeToolbar"
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <fragment
+            android:id="@+id/actionBarFragment"
             android:layout_width="match_parent"
-            android:background="@color/design_default_color_secondary"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            android:name="com.example.bit.View.Fragments.ActionBarFragment"
+            tools:layout="@layout/fragment_action_bar">
+        </fragment>
 
-        <LinearLayout
-            android:orientation="vertical"
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="wrap_content">
+        </com.google.android.material.tabs.TabLayout>
 
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </com.google.android.material.tabs.TabLayout>
-
-
-        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
@@ -35,112 +29,45 @@
             android:layout_weight="3">
 
             <androidx.viewpager.widget.ViewPager
-                android:id="@+id/AddressViewPager"
+                android:id="@+id/viewPager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <fragment
-                    android:id="@+id/mainFragment"
+                    android:id="@+id/addressFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:name="com.example.bit.View.Fragments.AddressFragment"
-                    tools:layout="@layout/fragment_deposit_addresses">
+                    tools:layout="@layout/fragment_address">
+                </fragment>
+
+                <fragment
+                    android:id="@+id/depositFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:name="com.example.bit.View.Fragments.DepositFragment"
+                    tools:layout="@layout/fragment_deposit">
                 </fragment>
 
             </androidx.viewpager.widget.ViewPager>
 
         </LinearLayout>
-<!--
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/DepositsLayout"
+
+        <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2">
+            android:layout_weight="0.33">
 
-
-            <LinearLayout
-                android:orientation="vertical"
+            <fragment
+                android:id="@+id/menuFragment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/deposits_recycleView"
-                    android:scrollbars="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="10"/>
-
-
-            </LinearLayout>
-
-        </androidx.viewpager.widget.ViewPager>-->
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:background="@drawable/border"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.3" >
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_marginStart="30dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
-
-
-                <Button
-                    android:id="@+id/depositsButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/home_deposit"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:textColor="@color/design_default_color_secondary"
-                    android:drawableTop="@drawable/reorder_horizontal"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <Button
-                    android:id="@+id/homeButton"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/home_home"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:textColor="@color/design_default_color_secondary"
-                    android:drawableTop="@drawable/home"/>
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_marginEnd="30dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@string/home_withdraw"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:textColor="@color/design_default_color_secondary"
-                    android:drawableTop="@drawable/send"/>
-
-            </LinearLayout>
-
+                android:name="com.example.bit.View.Fragments.MenuFragment"
+                tools:layout="@layout/fragment_menu">
+            </fragment>
 
         </LinearLayout>
 
-
     </LinearLayout>
-
 </layout>
