Starting to work on the withdraw module.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,11 +40,29 @@
                 android:layout_margin="50dp"
                 android:textAlignment="center"
                 android:textColor="@color/design_default_color_surface"
-                android:id="@+id/response"
-                android:textSize="20dp"
+                android:id="@+id/helloUser"
+                android:textSize="20sp"
                 style="@style/TextAppearance.MaterialComponents.Button"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="40dp" />
+
+            <TextView
+                android:textAlignment="center"
+                android:textColor="@color/design_default_color_surface"
+                android:textSize="20sp"
+                style="@style/TextAppearance.MaterialComponents.Button"
+                android:layout_width="match_parent"
+                android:text="@string/balanceMessage"
+                android:layout_height="40dp" />
+
+            <TextView
+                android:textAlignment="center"
+                android:textColor="@color/design_default_color_surface"
+                android:id="@+id/balance"
+                android:textSize="20sp"
+                style="@style/TextAppearance.MaterialComponents.Button"
+                android:layout_width="match_parent"
+                android:layout_height="40dp" />
 
         </LinearLayout>
 
