--- a/app/src/main/res/layout/fragment_deposit.xml
+++ b/app/src/main/res/layout/fragment_deposit.xml
@@ -7,6 +7,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/depositsRecycleView"
             android:scrollbars="vertical"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="10"
