--- a/app/src/main/res/layout/fragment_deposits_row.xml
+++ b/app/src/main/res/layout/fragment_deposits_row.xml
@@ -1,32 +1,50 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="65dp"
+    android:layout_marginBottom="20dp">
 
 
-    <TextView
-        android:layout_width="0dp"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/textViewTxId"
-        android:layout_weight="3"/>
+        style="@style/CardView.Light"
+        android:layout_marginLeft="@dimen/mtrl_card_spacing"
+        android:layout_marginTop="@dimen/mtrl_card_spacing"
+        android:layout_marginRight="@dimen/mtrl_card_spacing">
 
-    <TextView
-        android:layout_weight="2"
-        android:id="@+id/textViewAddress"
-        android:textAlignment="center"
-        android:textColor="@color/design_default_color_surface"
-        android:textSize="18sp"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/dateReceived"
+                style="@style/Widget.MaterialComponents.Chip.Action"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                app:chipIcon="@drawable/check_circle"
+                android:text="12/12/2019 22:10"/>
 
 
-    <TextView
-        android:layout_weight="1"
-        android:id="@+id/textViewAmount"
-        android:textAlignment="center"
-        android:textColor="@color/design_default_color_surface"
-        android:textSize="18sp"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"/>
+            <com.google.android.material.chip.Chip
+                android:id="@+id/amountReceived"
+                style="@style/Widget.MaterialComponents.Chip.Choice"
+                android:layout_width="match_parent"
+                android:layout_marginEnd="15dp"
+                android:layout_height="match_parent"
+                android:text="0,0000007 BTC"/>
+
+        </LinearLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
+
+
+
+
 
 </LinearLayout>
