--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -24,15 +24,14 @@
                 />
 
             <TextView
+                android:id="@+id/currentBalance"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
                 android:textAlignment="center"
                 android:textColor="@color/design_default_color_surface"
                 android:textSize="20sp"
-                style="@style/TextAppearance.MaterialComponents.Button"
-                android:text="@string/withdraw_request_text"
-                 />
+                style="@style/TextAppearance.MaterialComponents.Button"/>
 
         </LinearLayout>
 
@@ -54,6 +53,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="numberDecimal"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tvDestinationAddress"
+                android:layout_width="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_height="64dp"
+                android:layout_marginHorizontal="40dp"
+                android:hint="@string/withdraw_address_hint">
+
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     />
 
             </com.google.android.material.textfield.TextInputLayout>
