--- a/app/src/main/res/layout/fragment_withdraw_list.xml
+++ b/app/src/main/res/layout/fragment_withdraw_list.xml
@@ -1,13 +1,18 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/withdraawRecycleView"
+            android:scrollbars="vertical"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
+            android:layout_weight="10"
+            tools:listitem="@layout/fragment_deposits_row" />
 
     </LinearLayout>
 
